--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -15,3 +15,5 @@ spring.datasource.dbcp2.max-total=50
 #最大等待毫秒数
 spring.datasource.dbcp2.max-wait-millis=10000
 spring.datasource.dbcp2.initial-size=5
+#隔离级别 2 读写提交 read-commit
+spring.datasource.dbcp2.default-transaction-isolation=2
