--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-handlers-package=com.finance.handler
 
-logging.level.root= debug
-logging.level.org.springframework= debug
-logging.level.org.mybatis= debug
+logging.level.root= DEBUG
+logging.level.org.springframework= DEBUG
+logging.level.org.mybatis= DEBUG
 
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
