--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=84
 mybatis.type-aliases-package=com.finance.archives.po
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
@@ -7,6 +8,16 @@ logging.level.root= DEBUG
 logging.level.org.springframework= DEBUG
 logging.level.org.mybatis= DEBUG
 
+#配置连接池属性
+spring.redis.jedis.pool.max-active=10
+spring.redis.jedis.pool.max-idle=10
+spring.redis.jedis.pool.max-wait=2s
+spring.redis.jedis.pool.min-idle=5
+#配置redis服务器属性
+spring.redis.port=6379
+spring.redis.host=172.16.10.45
+spring.redis.password=1234567Aa
+spring.redis.timeout=2000ms
 
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.url=jdbc:mysql://39.108.160.213:3306/finance_0022e29112224e53bfcce096a477ef33?characterEncoding=utf-8&allowMultiQueries=true
