--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-server.port=84
+server.port=8081
 mybatis.type-aliases-package=com.finance.archives.po
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 mybatis.type-handlers-package=com.finance.handler
 
-logging.level.root= DEBUG
-logging.level.org.springframework= DEBUG
-logging.level.org.mybatis= DEBUG
+logging.level.root= log
+logging.level.org.springframework= log
+logging.level.org.mybatis= log
 
 #≈‰÷√¡¨Ω”≥ÿ Ù–‘
 spring.redis.jedis.pool.max-active=10
